# laminer

./: .gitignore  README.md  TODO.md  pylint.rc  pyproject.toml  requirements.txt  run.sh  runOllamaServer.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  question.md
.github/workflows/: pylint.yml  unittest.yml
data-cobol/: COBOL.md  cobol1_to_fix.csv
data-cobol/answers/: fibonacci.txt  fxsort.txt
data-cobol/facts/: learn-cobol.txt
data-cobol/questions/: cobol1.csv  cobol1.txt  fibonacci.txt  fxsort.txt
data-old/facts/: doctor_who.txt  fictionary_islands.txt
data-old/questions/: rag-invented.csv  start.csv
data/facts/: fact1.txt
data/questions/: easy1.csv
data/simple_questions/: start.csv
examiner/: README.md  pylint.rc  pyproject.toml
examiner/data/: fact1.txt  test1.csv
examiner/data/facts/: fact1.txt  mortals.txt
examiner/data/questions/: test1.csv
examiner/examiner/: run.py  runModel.py
laminer/: openai_integration.py  run.py  util.py
output/: 2024-06-21-17_qa_retrieval_prediction.xlsx
tests/: test_util.py
