[tool.poetry]
name = "examiner"
version = "0.1.0"
description = ""
authors = ["Giovanni Giorgi <jj@gioorgi.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.1.19"
fastembed = "^0.1.1"
langchainhub = "^0.1.14"
chromadb = "^0.4.18"
pandas = "^2.2.2"
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"
click = "^8.1.7"
pylint = "^3.1.0"
langchain-community = "^0.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
